# smart-hvac-rl-lab

./: .gitignore  README.md  REPORT.md  pyproject.toml
notebooks/: 01_baseline_thermostat.ipynb  02_train_sac.ipynb  03_policy_analysis.ipynb
results/logs/: sac_eval.csv
scripts/: causal_day.py  compare_policies.py  eval_all_daytypes.py  plot_pareto.py  run_baseline.py  run_baselines.py  train_rl.py
src/smart_hvac/: __init__.py
src/smart_hvac/control/: __init__.py  pid_controller.py  thermostat.py
src/smart_hvac/core/: __init__.py  parameters.py  thermal_model.py
src/smart_hvac/envs/: __init__.py  hvac_env.py
src/smart_hvac/evaluation/: __init__.py  metrics.py  plots.py  rollouts.py
src/smart_hvac/rl/: __init__.py  policies.py  train_ppo.py  train_sac.py
src/smart_hvac_rl_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_env_api.py  test_reward.py  test_thermal_model.py
