[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-hvac-rl-lab"
version = "0.1.0"
description = "A reproducible RL sandbox for learning HVAC control policies in simulated buildings."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "torch>=2.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "pandas>=2.0",
    "pytest>=7.4",
]

[project.optional-dependencies]
dev = ["jupyter", "ipykernel", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
